# archive

GlobalGameJam2019/: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
GlobalGameJam2019/GGJ/Include/: City.hpp  Game.hpp  Grass.hpp  House.hpp  Indestructible.hpp  Main.hpp  MapCreator.hpp  None.hpp  Oxygine.hpp  Tiles.hpp  Water.hpp
GlobalGameJam2019/GGJ/Src/: City.cpp  Game.cpp  Grass.cpp  House.cpp  Indestructible.cpp  Main.cpp  MapCreator.cpp  None.cpp  Tiles.cpp  Water.cpp
GlobalGameJam2019/Util/Include/: Exception.hpp  Iparameter.hpp  parameter.hpp
GlobalGameJam2019/Util/Src/: Exception.cpp  Parameter.cpp
mailer-pwa-next/: .babelrc.js  .gitignore  .prettierrc  .svgrrc.js  README.md  babel-plugin-macros.config.js  next.config.js  package.json  tailwind.config.js  tsconfig.json
mailer-pwa-next/.storybook/: main.js  preview.js
mailer-pwa-next/assets/: globals.css
mailer-pwa-next/components/: GlobalStyles.tsx
mailer-pwa-next/components/Icons/custom/: MailAdd.tsx  MailBig.tsx  index.tsx
mailer-pwa-next/components/Icons/outline/: AcademicCap.tsx  Adjustments.tsx  Annotation.tsx  Archive.tsx  ArrowCircleDown.tsx  ArrowCircleLeft.tsx  ArrowCircleRight.tsx  ArrowCircleUp.tsx  ArrowDown.tsx  ArrowLeft.tsx  ArrowNarrowDown.tsx  ArrowNarrowLeft.tsx  ArrowNarrowRight.tsx  ArrowNarrowUp.tsx  ArrowRight.tsx  ArrowUp.tsx  ArrowsExpand.tsx  AtSymbol.tsx  Backspace.tsx  BadgeCheck.tsx  Ban.tsx  Beaker.tsx  Bell.tsx  BookOpen.tsx  Bookmark.tsx  BookmarkAlt.tsx  Briefcase.tsx  Cake.tsx  Calculator.tsx  Calendar.tsx  Camera.tsx  Cash.tsx  ChartBar.tsx  ChartPie.tsx  ChartSquareBar.tsx  Chat.tsx  ChatAlt.tsx  ChatAlt2.tsx  Check.tsx  CheckCircle.tsx  (+186 more)
mailer-pwa-next/components/Icons/solid/: AcademicCap.tsx  Adjustments.tsx  Annotation.tsx  Archive.tsx  ArrowCircleDown.tsx  ArrowCircleLeft.tsx  ArrowCircleRight.tsx  ArrowCircleUp.tsx  ArrowDown.tsx  ArrowLeft.tsx  ArrowNarrowDown.tsx  ArrowNarrowLeft.tsx  ArrowNarrowRight.tsx  ArrowNarrowUp.tsx  ArrowRight.tsx  ArrowUp.tsx  ArrowsExpand.tsx  AtSymbol.tsx  Backspace.tsx  (+207 more)
mailer-pwa-next/pages/: 404.tsx  _app.tsx  _document.tsx  _error.tsx  _offline.tsx  first-login.tsx  index.tsx  onboarding.tsx
mailer-pwa-next/pages/inbox/: index.tsx  mail.tsx  send.tsx
mailer-pwa-next/public/: browserconfig.xml  manifest.json
mailer-pwa-next/src/: api.ts  lazy.ts  mirage_mocking.ts  svgr_template.ts  utils.ts
mailer-pwa-next/src/store/: emails.ts  index.ts  user.ts  util.ts
mailer-pwa-next/stories/: BackgroundLogo.stories.tsx  BulletItem.stories.tsx  Button.stories.tsx  Checkbox.stories.tsx  CommonHead.stories.tsx  Form.stories.tsx  Icon.stories.tsx  Label.stories.tsx  Link.stories.tsx  MailCard.stories.tsx
viabird/: Readme.md
(+17 files in other folders)
